--- a/promocao.html
+++ b/promocao.html
@@ -8,6 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="./css/promocao.css">
+  <script src="./js/script.js" defer></script>
 </head>
 <body class="text-white">
   <header class="flex p-6">
@@ -77,7 +78,7 @@
       <div class="product-card">
         <img class="product-image" src="./galeria/promocao01.png" alt="Produto 1"/>
         <div class="product-info">
-          <h3 class="product-title">Camisa de Linho Masculina, Casual Manga Comprida</h3>
+          <h3 class="product-title">Blusa Feminina Cachequer - Verde</h3>
           <p class="product-description">A camisa de linho masculina casual garante frescor e leveza ao look, perfeita para o dia a dia essa peça de roupa pode ser usada em diversas ocasiões.</p>
           <div class="product-footer">
             <span class="product-price"> ̶R̶$̶ ̶2̶5̶0̶,̶0̶0̶  R$ 100,00</span>
@@ -97,7 +98,7 @@
         </div>
       </div>
       <div class="product-card">
-        <img class="product-image" src="./image/formal02.png" alt="Produto 3"/>
+        <img class="product-image" src="./galeria/promocao03.png" alt="Produto 3"/>
         <div class="product-info">
           <h3 class="product-title">Calça Alfaiataria Algodão Preta</h3>
           <p class="product-description">Uma peça prática e elegante, combinando conforto e sofisticação da alfaiataria.</p>
