--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="./css/contact.css">
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
   <header class="flex p-6">
