--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<html lang="pt-br"> 
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -7,10 +6,9 @@
     <script src="./js/script.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap"
-        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js" defer></script>
 </head>
 
 <body>
@@ -29,9 +27,13 @@
         <a href="./promocao.html">Promoção</a>
         <a href="./contato.html">Contato</a>
     </nav>
-    <div class="flex lg:hidden" id="hamburger-icon">
-        <i class="fas fa-bars text-xl cursor-pointer" onclick="toggleMenu()"></i>
-    </div>
+    <!-- Adicione um ícone de menu para dispositivos móveis -->
+    <div id="cart-icon" class="relative flex space-x-4">
+        <a href="#" class="fas fa-shopping-cart text-xl" id="cart-toggle">
+          <span id="cart-counter">0</span>
+        </a>
+        <a href="" class="fas fa-user-circle text-xl"></a>
+      </div>
 </header>
 <main class="flex justify-between items-center p-6 flex-col md:flex-row">
     <div class="space-y-6 ml-12 text-center md:text-left">
